--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,3 +25,8 @@ jobs:
     - name: Test coupler
       run: go test -v ./...
       working-directory: ./
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+          token: ${{ secrets.CODECOV_TOKEN }}
