fixed test step in github workflow

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,7 +23,7 @@ jobs:
       working-directory: ./
 
     - name: Test coupler
-      run: go test -v ./...
+      run: go test -race -coverprofile=coverage.txt -covermode=atomic
       working-directory: ./
 
     - name: Upload coverage to Codecov
